typos in proofs corrected and updated affiliation

--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -15,7 +15,7 @@
 
 
 \noindent {Antony Eagle}\\
-\emph{University of Adelaide}\\[1.5cm]
+\emph{Adelaide University}\\[1.5cm]
 
 {Tim Button}\\
 \emph{University College London}\\[1.5cm]
@@ -65,7 +65,7 @@ Typesetting was carried out entirely in \XeLaTeX\ using the \texttt{Memoir} clas
 
 \chapter*{How to Use This Book}
 
-This book has been designed for use in conjunction with the University of Adelaide courses \textsc{phil} 1110 \emph{Introduction to Logic} and \textsc{phil 1111ol} \emph{Introductory Logic}. But it is suitable for self-study as well. I have included a number of features to assist your learning. \begin{itemize}
+This book was designed for use in conjunction with logic courses at the University of Adelaide/Adelaide University. But it is suitable for self-study as well. I have included a number of features to assist your learning. \begin{itemize}
 	\item \forallx\ is divided into seven chapters, each further divided into sections and subsections. The sections are continuously numbered. \begin{itemize}
 		\item Chapter \ref{ch.intro} gives an overview of how I understand the project of formal logic;
 		\item Chapters \ref{ch.TFL}–\ref{ch.TruthTables} cover sentential or truth-functional logic;
