seriously misleading typo in §18.2 corrected

--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -1046,7 +1046,7 @@ This symbolisation works well. But, it turns out, it doesn't quite do what we wa
 	\item[So:] Pavel owes money to Hikaru: $Oph$.
 \end{earg}This argument is valid in English. But its symbolisation is not valid. If we pick Hikaru to be the value of `$y$', we get from \ref{hikaru1} the conditional $\enot Iph \eif Oph$. But \ref{hikaru2} doesn't give us the antecedent of this conditional: $\enot Iph$ is potentially quite different from $\enot Ihp$. So the argument isn't formally valid.
 
-The argument isn't formally valid, because the sentence `$\enot Ihp$' doesn't formally entail `$\enot Ihp$' as a matter of logical structure alone. If the original argument is valid, then we need a symbolisation that as \emph{a matter of logic} allows the distinctness (non-identity) of Hikaru and Pavel to entail the distinctness of Pavel and Hikaru.  
+The argument isn't formally valid, because the sentence `$\enot Ihp$' doesn't formally entail `$\enot Iph$' as a matter of logical structure alone. If the original argument is valid, then we need a symbolisation that as \emph{a matter of logic} allows the distinctness (non-identity) of Hikaru and Pavel to entail the distinctness of Pavel and Hikaru.  
 
 \section{Adding Identity}
 
